# SmartEnergy

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  smart_energy_final_environment.py  smart_env.py
.github/workflows/.github/workflows/: hf-deploy.yml
openenv_smart_energy_final.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  requirements.txt  smart_energy_final_environment.py
