[project]
name = "smart-energy-optimization"
version = "0.1.0"
description = "AI-based smart energy optimization system"
authors = [{name = "Vaishnavi"}]

dependencies = [
    "gradio",
    "pandas",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



